force-app/main/default/objects/LiveChatTranscript/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <formula>&apos;Inbound&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Type</label>
    <type>Text</type>
</CustomField>