force-app/main/default/objects/LiveChatTranscript/fields/Chat_Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Chat_Initiated_By__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chat Initiated By</label>
    <type>Text</type>
</CustomField>