force-app/main/default/objects/LiveChatTranscript/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <label>Customer Account #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>