force-app/main/default/objects/LiveChatTranscript/fields/Customer_DOB__c.field-meta.xml
<CustomField>
    <fullName>Customer_DOB__c</fullName>
    <label>Customer DOB</label>
    <type>Date</type>
</CustomField>