force-app/main/default/objects/LiveChatTranscript/fields/Customer_Identified__c.field-meta.xml
<CustomField>
    <fullName>Customer_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Identified</label>
    <type>Checkbox</type>
</CustomField>