force-app/main/default/objects/LiveChatTranscript/fields/Customer_Sentiments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sentiments__c</fullName>
    <label>Customer Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>