force-app/main/default/objects/LiveChatTranscript/fields/Customer_Verified__c.field-meta.xml
<CustomField>
    <fullName>Customer_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Verified</label>
    <type>Checkbox</type>
</CustomField>