force-app/main/default/objects/LiveChatTranscript/fields/RS_ID__c.field-meta.xml
<CustomField>
    <fullName>RS_ID__c</fullName>
    <formula>&quot;/&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RS ID</label>
    <type>Text</type>
</CustomField>